kubernetes/apps/analytics/plausible/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: analytics
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: plausible
