kubernetes/apps/analytics/plausible/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plausible
  namespace: analytics
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`testing.midka.dev`)
      kind: Rule
      services:
        - name: plausible
          port: 8000
